--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
         "@inertiajs/vue3": "^1.0.13",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
-        "primevue": "^3.37.0",
+        "primevue": "^3.37.0"
     }
 }
